[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/main/Main.gd" type="Script" id=1]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.00012207
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50

[node name="VSplitContainer" type="VSplitContainer" parent="PanelContainer/MarginContainer"]
margin_left = 50.0
margin_top = 50.0
margin_right = 960.0
margin_bottom = 536.0

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/MarginContainer/VSplitContainer"]
margin_right = 910.0
margin_bottom = 237.0
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VSplitContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 903.0
margin_bottom = 230.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_left = 10

[node name="GameLogScroll" type="ScrollContainer" parent="PanelContainer/MarginContainer/VSplitContainer/PanelContainer/MarginContainer"]
margin_left = 10.0
margin_right = 896.0
margin_bottom = 223.0
scroll_horizontal_enabled = false

[node name="GameLog" type="RichTextLabel" parent="PanelContainer/MarginContainer/VSplitContainer/PanelContainer/MarginContainer/GameLogScroll"]
margin_top = 208.0
margin_right = 886.0
margin_bottom = 223.0
size_flags_horizontal = 3
size_flags_vertical = 10
bbcode_enabled = true
fit_content_height = true
scroll_following = true

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/VSplitContainer"]
margin_top = 249.0
margin_right = 910.0
margin_bottom = 486.0
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="GameButtons" type="VBoxContainer" parent="PanelContainer/MarginContainer/VSplitContainer/ScrollContainer"]
margin_right = 910.0
size_flags_horizontal = 3
